--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 4000",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start -p 4000",
     "lint": "next lint"
@@ -30,6 +30,7 @@
     "react-sweetalert2": "^0.5.2",
     "sortablejs": "^1.15.0",
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.12.4",
     "tailwindcss": "^3.2.7",
     "typeorm": "0.2.28"
   }
