--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 4000",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -30,7 +30,6 @@
     "react-sweetalert2": "^0.5.2",
     "sortablejs": "^1.15.0",
     "sweetalert": "^2.1.2",
-    "sweetalert2": "^11.12.4",
     "tailwindcss": "^3.2.7",
     "typeorm": "0.2.28"
   }
