--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.282.0",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
